; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-ipc-heavy-traffic-deadlock-bug.c_do_writes_and_reads.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-ipc-heavy-traffic-deadlock-bug.c_do_writes_and_reads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@bytes_written = common dso_local global i64 0, align 8
@bytes_read = common dso_local global i64 0, align 8
@NUM_WRITES = common dso_local global i64 0, align 8
@alloc_cb = common dso_local global i32 0, align 4
@read_cb = common dso_local global i32 0, align 4
@UV_RUN_DEFAULT = common dso_local global i32 0, align 4
@XFER_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @do_writes_and_reads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_writes_and_reads(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  store i64 0, i64* @bytes_written, align 8
  store i64 0, i64* @bytes_read, align 8
  store i64 0, i64* %3, align 8
  br label %5

5:                                                ; preds = %12, %1
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @NUM_WRITES, align 8
  %8 = icmp ult i64 %6, %7
  br i1 %8, label %9, label %15

9:                                                ; preds = %5
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = call i32 @do_write(%struct.TYPE_5__* %10)
  br label %12

12:                                               ; preds = %9
  %13 = load i64, i64* %3, align 8
  %14 = add i64 %13, 1
  store i64 %14, i64* %3, align 8
  br label %5

15:                                               ; preds = %5
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %17 = load i32, i32* @alloc_cb, align 4
  %18 = load i32, i32* @read_cb, align 4
  %19 = call i32 @uv_read_start(%struct.TYPE_5__* %16, i32 %17, i32 %18)
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = icmp eq i32 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 @ASSERT(i32 %22)
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32, i32* @UV_RUN_DEFAULT, align 4
  %28 = call i32 @uv_run(i32 %26, i32 %27)
  store i32 %28, i32* %4, align 4
  %29 = load i32, i32* %4, align 4
  %30 = icmp eq i32 %29, 0
  %31 = zext i1 %30 to i32
  %32 = call i32 @ASSERT(i32 %31)
  %33 = load i64, i64* @bytes_written, align 8
  %34 = load i64, i64* @XFER_SIZE, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = call i32 @ASSERT(i32 %36)
  %38 = load i64, i64* @bytes_read, align 8
  %39 = load i64, i64* @XFER_SIZE, align 8
  %40 = icmp eq i64 %38, %39
  %41 = zext i1 %40 to i32
  %42 = call i32 @ASSERT(i32 %41)
  ret void
}

declare dso_local i32 @do_write(%struct.TYPE_5__*) #1

declare dso_local i32 @uv_read_start(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_run(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
